--- a/templates/templates.html
+++ b/templates/templates.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Wakreate</h1>
+  <h1>Hello World!</h1>
   <hr>
   {% block main_contents %}
   {% endblock %}
